--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,1 +1,53 @@
 @import "tailwindcss";
+
+@theme {
+  --color-primary: rgb(211 188 253);
+  --color-surface-tint: rgb(211 188 253);
+  --color-on-primary: rgb(56 38 92);
+  --color-primary-container: rgb(79 61 116);
+  --color-on-primary-container: rgb(235 221 255);
+  --color-secondary: rgb(205 194 219);
+  --color-on-secondary: rgb(52 45 64);
+  --color-secondary-container: rgb(75 67 88);
+  --color-on-secondary-container: rgb(233 222 248);
+  --color-tertiary: rgb(240 183 197);
+  --color-on-tertiary: rgb(74 37 48);
+  --color-tertiary-container: rgb(100 59 70);
+  --color-on-tertiary-container: rgb(255 217 225);
+  --color-error: rgb(255 180 171);
+  --color-on-error: rgb(105 0 5);
+  --color-error-container: rgb(147 0 10);
+  --color-on-error-container: rgb(255 218 214);
+  --color-background: rgb(21 18 24);
+  --color-on-background: rgb(231 224 232);
+  --color-surface: rgb(21 18 24);
+  --color-on-surface: rgb(231 224 232);
+  --color-surface-variant: rgb(73 69 78);
+  --color-on-surface-variant: rgb(203 196 207);
+  --color-outline: rgb(148 143 153);
+  --color-outline-variant: rgb(73 69 78);
+  --color-shadow: rgb(0 0 0);
+  --color-scrim: rgb(0 0 0);
+  --color-inverse-surface: rgb(231 224 232);
+  --color-inverse-on-surface: rgb(50 47 53);
+  --color-inverse-primary: rgb(104 84 142);
+  --color-primary-fixed: rgb(235 221 255);
+  --color-on-primary-fixed: rgb(35 15 70);
+  --color-primary-fixed-dim: rgb(211 188 253);
+  --color-on-primary-fixed-variant: rgb(79 61 116);
+  --color-secondary-fixed: rgb(233 222 248);
+  --color-on-secondary-fixed: rgb(31 24 43);
+  --color-secondary-fixed-dim: rgb(205 194 219);
+  --color-on-secondary-fixed-variant: rgb(75 67 88);
+  --color-tertiary-fixed: rgb(255 217 225);
+  --color-on-tertiary-fixed: rgb(49 16 27);
+  --color-tertiary-fixed-dim: rgb(240 183 197);
+  --color-on-tertiary-fixed-variant: rgb(100 59 70);
+  --color-surface-dim: rgb(21 18 24);
+  --color-surface-bright: rgb(59 56 62);
+  --color-surface-container-lowest: rgb(15 13 19);
+  --color-surface-container-low: rgb(29 27 32);
+  --color-surface-container: rgb(33 31 36);
+  --color-surface-container-high: rgb(44 41 47);
+  --color-surface-container-highest: rgb(54 52 58);
+}
