--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -51,3 +51,14 @@
   --color-surface-container-high: rgb(44 41 47);
   --color-surface-container-highest: rgb(54 52 58);
 }
+
+@layer base {
+  input {
+    appearance: textfield;
+  }
+  input[type="number"]::-webkit-inner-spin-button,
+  input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+}
