--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -53,6 +53,12 @@
 }
 
 @layer base {
+  html,
+  body,
+  #__nuxt {
+    background-color: var(--color-surface);
+  }
+
   input {
     appearance: textfield;
   }
